added backpacks table

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,12 @@
-<p>
-  Modify me in `app/views/homes/index.html.erb` or change the root directive in
-  `config/routes.rb`
-</p>
+<div class="row">
+  <div class="medium-12 medium-centered columns text centered">
+    <h1>Welcom to the HappyCamper Gear Exchange</h1>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="medium-12 medium-centered columns">
+    <%= link_to "View Available Backpacks", backpacks_path, class: "button radius"%>
+  </div>
+</div>
