changed seed method, added show page, added background immage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,4 +15,10 @@
  *= require foundation_and_overrides
 
  */
- 
+ #title_centered {
+   text-align: center;
+ }
+
+body {
+  background-image: url(/assets/hiker.jpg);
+}
