--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,12 +1,18 @@
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
-    <h1>Welcom to the HappyCamper Gear Exchange</h1>
+  <div class="medium-12 medium-centered columns">
+    <h1 id="title_centered">Welcom to the HappyCamper Gear Exchange</h1>
   </div>
 </div>
 
 
 <div class="row">
-  <div class="medium-12 medium-centered columns">
+  <div class="medium-4 columns">
     <%= link_to "View Available Backpacks", backpacks_path, class: "button radius"%>
+  </div>
+  <div class="medium-4 columns">
+    <%= link_to "View Available Tents", backpacks_path, class: "button radius"%>
+  </div>
+  <div class="medium-4 columns">
+    <%= link_to "View Available Sleeping Bags", backpacks_path, class: "button radius"%>
   </div>
 </div>
