--- a/app/views/tents/index.html.erb
+++ b/app/views/tents/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-12 medium-centered columns text centered">
-    <h1> Available Backpacks</h1>
+    <h1> Available Tents</h1>
   </div>
 </div>
 
@@ -8,10 +8,10 @@
   <div class="medium-12 medium-centered columns">
     <table>
       <tbody>
-        <% @backpacks.each do |backpack| %>
+        <% @tents.each do |tent| %>
         <tr>
-          <td> <%= link_to backpack.name, backpack %> </td>
-          <td> <%= backpack.user.username %></td>
+          <td> <%= link_to tent.name, tent %> </td>
+          <td> <%= tent.user.username %></td>
         </tr>
         <% end %>
       </tbody>
