--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="medium-12 medium-centered text-center columns">
     <%= link_to "View Available Backpacks", backpacks_path, class: "button radius large"%>
-    <%= link_to "View Available Tents", backpacks_path, class: "button radius large"%>
+    <%= link_to "View Available Tents", tents_path, class: "button radius large"%>
     <%= link_to "View Available Sleeping Bags", backpacks_path, class: "button radius large"%>
   </div>
 </div>
