--- a/app/views/tents/show.html.erb
+++ b/app/views/tents/show.html.erb
@@ -10,9 +10,8 @@
     <ul>
       <li> Brand: <%= @tent.brand %> </li>
       <li> Capacity (in Liters): <%= @tent.capacity %> </li>
-      <li> Size: <%= @tent.size %> </li>
+      <li> Type: <%= @tent.use %> </li>
       <li> Condition: <%= @tent.condition %> </li>
-      <li> Gender: <%= @tent.gender %> </li>
     </ul>
   </div>
 </div>
