Added sleepingbags, more minor style changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
  */
 body {
-  background-image: url(/assets/hiker2.jpg);
+  background-image: url(/assets/hiker.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
