--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-12 medium-centered text-center columns">
-    <h1>Welcome to the HappyCamper Gear Exchange</h1>
+    <h1>WELCOME TO THE HAPPY CAMPER GEAR EXCHANGE</h1>
   </div>
 </div>
 
@@ -9,6 +9,6 @@
   <div class="medium-12 medium-centered text-center columns">
     <%= link_to "View Available Backpacks", backpacks_path, class: "button radius large"%>
     <%= link_to "View Available Tents", tents_path, class: "button radius large"%>
-    <%= link_to "View Available Sleeping Bags", backpacks_path, class: "button radius large"%>
+    <%= link_to "View Available Sleeping Bags", sleepingbags_path, class: "button radius large"%>
   </div>
 </div>
