more style changes

--- a/app/views/tents/index.html.erb
+++ b/app/views/tents/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-12 medium-centered columns text centered">
-    <h1> Available Tents</h1>
+    <h1>AVAILABLE TENTS</h1>
   </div>
 </div>
 
