--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -210,7 +210,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: NovitoNova-Thin;
+$header-font-family: KGFallForYou;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
 $header-font-color: black;
@@ -220,7 +220,7 @@ $header-font-color: black;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(65);
+$h1-font-size: rem-calc(55);
 // $h2-font-size: rem-calc(37);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
