--- a/app/views/backpacks/index.html.erb
+++ b/app/views/backpacks/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="medium-12 medium-centered columns text centered">
-    <h1> Available Backpacks</h1>
+    <h1>AVAILABLE BACKPACKS</h1>
   </div>
 </div>
 
