--- a/app/views/sleepingbags/index.html.erb
+++ b/app/views/sleepingbags/index.html.erb
@@ -13,3 +13,9 @@
     </ul>
   </div>
 </div>
+
+<div class="row">
+  <div class="medium-12 medium-centered text-center columns">
+    <%= paginate @sleepingbags %>
+  </div>
+</div>
