--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -12,3 +12,10 @@
     <%= link_to "View Available Sleeping Bags", sleepingbags_path, class: "button radius large"%>
   </div>
 </div>
+
+
+<div class="row">
+  <div class="medium-12 medium-centered text-center columns">
+  
+  </div>
+</div>
