--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,13 @@
 
     <section class="top-bar-section">
       <ul class="right">
-        <%- if current_user -%>
+        <% if current_user %>
+          <li><%= link_to 'My Account', user_path(current_user.id) %></li>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
-        <%- end -%>
+        <% end %>
       </ul>
     </section>
   </nav>
