add new/create for tent/sleepingbag/backpack

--- a/app/views/backpacks/show.html.erb
+++ b/app/views/backpacks/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
+  <div class="medium-12 medium-centered columns">
     <h3><%= @backpack.name %></h3>
     <h5> User: <%= @backpack.user.username %> </h5>
   </div>
 </div>
 
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
+  <div class="medium-6 medium-centered columns float left">
     <ul>
       <li> Brand: <%= @backpack.brand %> </li>
       <li> Capacity (in Liters): <%= @backpack.capacity %> </li>
@@ -14,5 +14,8 @@
       <li> Condition: <%= @backpack.condition %> </li>
       <li> Gender: <%= @backpack.gender %> </li>
     </ul>
+  </div>
+  <div class="medium-6 medium-centered columns text centered float left">
+    <%= image_tag @backpack.image.url(:medium) %>
   </div>
 </div>
