--- a/app/views/sleepingbags/show.html.erb
+++ b/app/views/sleepingbags/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
+  <div class="medium-12 medium-centered columns ">
     <h3><%= @sleepingbag.name %></h3>
     <h5> User: <%= @sleepingbag.user.username %> </h5>
   </div>
 </div>
 
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
+  <div class="medium-6 medium-centered columns float left">
     <ul>
       <li> Brand: <%= @sleepingbag.brand %> </li>
       <li> Temperature Rating: <%= @sleepingbag.temp_rating %> </li>
@@ -14,5 +14,8 @@
       <li> Fill Material: <%= @sleepingbag.fill %> </li>
       <li> Condition: <%= @sleepingbag.condition %> </li>
     </ul>
+  </div>
+  <div class="medium-6 medium-centered columns text centered float left">
+    <%= image_tag @sleepingbag.image.url(:medium) %>
   </div>
 </div>
