--- a/app/views/tents/new.html.erb
+++ b/app/views/tents/new.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-  <% if @backpack.errors.present? %>
+  <% if @tent.errors.present? %>
     <div class="large-12 alert-box alert" data-alert>
       <ul>
-        <% @backpack.errors.full_messages.each do |error| %>
+        <% @tent.errors.full_messages.each do |error| %>
           <li><%= error %></li>
         <% end %>
       </ul>
@@ -12,9 +12,9 @@
 
 <div class="row">
   <div class="medium-12 medium-centered columns">
-    <h2>New Backpack</h2>
+    <h2>New Tent</h2>
 
-      <%= form_for @backpack do |f| %>
+      <%= form_for @tent do |f| %>
 
         <%= f.label :name %>
         <%= f.text_field :name %>
@@ -22,17 +22,14 @@
         <%= f.label :brand %>
         <%= f.text_field :brand %>
 
-        <%= f.label "Capacity (in Liters)" %>
-        <%= f.select :capacity, options_for_select(15..115) %>
+        <%= f.label "Capacity" %>
+        <%= f.select :capacity, options_for_select(1..8) %>
 
-        <%= f.label :size %>
-        <%= f.select :size, options_for_select(Backpack::SIZES) %>
+        <%= f.label :use %>
+        <%= f.select :use, options_for_select(Tent::USE) %>
 
         <%= f.label :condition %>
-        <%= f.select :condition, options_for_select(Backpack::CONDITION) %>
-
-        <%= f.label :gender %>
-        <%= f.select :gender, options_for_select(Backpack::GENDER) %>
+        <%= f.select :condition, options_for_select(Tent::CONDITION) %>
 
         <%= f.label :image %>
         <%= f.file_field :image %>
