--- a/app/views/tents/show.html.erb
+++ b/app/views/tents/show.html.erb
@@ -6,12 +6,15 @@
 </div>
 
 <div class="row">
-  <div class="medium-12 medium-centered columns text centered">
+  <div class="medium-6 medium-centered columns float left">
     <ul>
       <li> Brand: <%= @tent.brand %> </li>
       <li> Capacity (in Liters): <%= @tent.capacity %> </li>
       <li> Type: <%= @tent.use %> </li>
       <li> Condition: <%= @tent.condition %> </li>
     </ul>
+  </div>
+  <div class="medium-6 medium-centered columns float left">
+    <%= image_tag @tent.image.url(:medium) %>
   </div>
 </div>
