--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -212,7 +212,7 @@ $include-html-global-classes: $include-html-classes;
 // We use these to control header font styles
 $header-font-family: KGFallForYou;
 // $header-font-weight: $font-weight-normal;
-// $header-font-style: normal;
+$header-font-style: small-caps;
 $header-font-color: black;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
