--- a/app/views/sleepingbags/show.html.erb
+++ b/app/views/sleepingbags/show.html.erb
@@ -7,15 +7,37 @@
 
 <div class="row">
   <div class="medium-6 medium-centered columns float left">
-    <ul>
-      <li> Brand: <%= @sleepingbag.brand %> </li>
-      <li> Temperature Rating: <%= @sleepingbag.temp_rating %> </li>
-      <li> Size: <%= @sleepingbag.size %> </li>
-      <li> Fill Material: <%= @sleepingbag.fill %> </li>
-      <li> Condition: <%= @sleepingbag.condition %> </li>
-    </ul>
+    <table>
+      <tbody>
+        <tr>
+          <td> Brand: </td>
+          <td> <%= @sleepingbag.brand %> </td>
+        </tr>
+        <tr>
+          <td> Temperature Rating (℉): </td>
+          <td> <%= @sleepingbag.temp_rating %> </td>
+        </tr>
+        <tr>
+          <td> Size: </td>
+          <td> <%= @sleepingbag.size %> </td>
+        </tr>
+        <tr>
+          <td> Condition: </td>
+          <td> <%= @sleepingbag.condition %> </td>
+        </tr>
+        <tr>
+          <td> Fill: </td>
+          <td> <%= @sleepingbag.fill %> </td>
+        </tr>
+      </tbody>
+    </table>
+    <% if current_user == @sleepingbag.user %>
+      <%= link_to "Edit sleepingbag", edit_sleepingbag_path, class: "button radius tiny" %>
+    <% end %>
   </div>
   <div class="medium-6 medium-centered columns text centered float left">
-    <%= image_tag @sleepingbag.image.url(:medium) %>
+    <% if @sleepingbag.image_file_name %>
+      <%= image_tag @sleepingbag.image.url(:medium) %>
+    <% end %>
   </div>
 </div>
