--- a/app/views/backpacks/edit.html.erb
+++ b/app/views/backpacks/edit.html.erb
@@ -9,10 +9,10 @@
     </div>
   <% end %>
 </div>
-
+<br>
 <div class="row">
-  <div class="medium-12 medium-centered columns">
-    <h2>New Backpack</h2>
+  <div class="medium-6 medium-centered columns" id="box">
+    <h2 class="text-center">Edit Backpack</h2>
 
       <%= form_for @backpack do |f| %>
 
@@ -28,11 +28,11 @@
         <%= f.label :size %>
         <%= f.select :size, options_for_select(Backpack::SIZES) %>
 
-        <%= f.label :condition %>
-        <%= f.select :condition, options_for_select(Backpack::CONDITION) %>
-
         <%= f.label :gender %>
         <%= f.select :gender, options_for_select(Backpack::GENDER) %>
+
+        <%= f.label :condition %>
+        <%= f.select :condition, options_for_select(Backpack::CONDITION) %>
 
         <%= f.label :image %>
         <%= f.file_field :image %>
