--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,3 +30,20 @@ body {
 li {
   list-style-type: none;
 }
+
+#box {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+a {
+  color: black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+}
