--- a/app/views/sleepingbags/show.html.erb
+++ b/app/views/sleepingbags/show.html.erb
@@ -1,36 +1,21 @@
 <div class="row">
   <div class="medium-12 medium-centered columns ">
-    <h3><%= @sleepingbag.name %></h3>
-    <h5> User: <%= @sleepingbag.user.username %> </h5>
+    <h2><%= @sleepingbag.name %></h2>
   </div>
 </div>
 
 <div class="row">
-  <div class="medium-6 medium-centered columns float left">
-    <table>
-      <tbody>
-        <tr>
-          <td> Brand: </td>
-          <td> <%= @sleepingbag.brand %> </td>
-        </tr>
-        <tr>
-          <td> Temperature Rating (℉): </td>
-          <td> <%= @sleepingbag.temp_rating %> </td>
-        </tr>
-        <tr>
-          <td> Size: </td>
-          <td> <%= @sleepingbag.size %> </td>
-        </tr>
-        <tr>
-          <td> Condition: </td>
-          <td> <%= @sleepingbag.condition %> </td>
-        </tr>
-        <tr>
-          <td> Fill: </td>
-          <td> <%= @sleepingbag.fill %> </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="medium-4  columns float left">
+    <div class="medium-12" id=box>
+      <ul>
+        <li> User: <%= @sleepingbag.user.username %> </li>
+        <li> Brand: <%= @sleepingbag.brand %> </li>
+        <li> Temperature Rating (℉): <%= @sleepingbag.temp_rating %> </li>
+        <li> Size: <%= @sleepingbag.size %> </li>
+        <li> Condition: <%= @sleepingbag.condition %> </li>
+        <li> Fill: <%= @sleepingbag.fill %> </li>
+      <ul>
+    </div>
     <% if current_user == @sleepingbag.user %>
       <%= link_to "Edit sleepingbag", edit_sleepingbag_path, class: "button radius tiny" %>
     <% end %>
