--- a/app/views/tents/index.html.erb
+++ b/app/views/tents/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-  <div class="medium-12 medium-centered columns">
+  <div class="medium-4 columns" id="box">
     <ul>
       <% @tents.each do |tent| %>
         <li> <%= link_to tent.name, tent %> : <%= tent.user.username %></li>
@@ -13,9 +13,9 @@
     </ul>
   </div>
 </div>
-
+<br>
 <div class="row">
-  <div class="medium-12 medium-centered text-center columns">
+  <div class="medium-4 text-center columns" id="box">
     <%= paginate @tents %>
   </div>
 </div>
