--- a/app/views/tents/show.html.erb
+++ b/app/views/tents/show.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="medium-12 medium-centered columns text centered">
     <h3><%= @tent.name %></h3>
-    <h5> User: <%= @tent.user.username %> </h5>
   </div>
 </div>
 
 <div class="row">
-  <div class="medium-6 medium-centered columns float left">
+  <div class="medium-3 columns float left" id="box">
     <ul>
+      <li> User: <%= @tent.user.username %> </li>
       <li> Brand: <%= @tent.brand %> </li>
       <li> Capacity (in Liters): <%= @tent.capacity %> </li>
       <li> Type: <%= @tent.use %> </li>
@@ -15,6 +15,8 @@
     </ul>
   </div>
   <div class="medium-6 medium-centered columns float left">
-    <%= image_tag @tent.image.url(:medium) %>
+    <% if @tent.image_file_name %>
+      <%= image_tag @tent.image.url(:medium) %>
+    <% end %>
   </div>
 </div>
