--- a/app/views/backpacks/new.html.erb
+++ b/app/views/backpacks/new.html.erb
@@ -9,11 +9,10 @@
     </div>
   <% end %>
 </div>
-
+<br>
 <div class="row">
-  <div class="medium-12 medium-centered columns">
-    <h2>New Backpack</h2>
-
+<div class="medium-6 medium-centered columns" id="box">
+  <h2 class="text-center">New Backpack</h2>
       <%= form_for @backpack do |f| %>
 
         <%= f.label :name %>
