--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 <br>
 <div class="row" id="box">
   <div class="medium-11 medium-centered columns">
-    <h2> YOUR GEAR </h2>
+    <h2 class="text-center"> YOUR GEAR </h2>
   </div>
   <div class="medium-4 text-center columns float left">
     <h4>BACKPACKS</h4>
