--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,18 @@
 <div class="row">
-  <div class="medium-12 medium-centered columns">
-    <h2>EDIT USER </h2>
+  <% if @user.errors.present? %>
+    <div class="large-12 alert-box alert" data-alert>
+      <ul>
+        <% @user.errors.full_messages.each do |error| %>
+          <li><%= error %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+</div>
+<br>
+<div class="row">
+  <div class="medium-6 medium-centered columns" id="box">
+    <h2 class="text-center">EDIT USER </h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
