--- a/app/views/sleepingbags/new.html.erb
+++ b/app/views/sleepingbags/new.html.erb
@@ -9,9 +9,9 @@
     </div>
   <% end %>
 </div>
-
+<br>
 <div class="row">
-  <div class="medium-12 medium-centered columns">
+  <div class="medium-6 medium-centered columns"  id="box">
     <h2>New sleepingbag</h2>
 
       <%= form_for @sleepingbag do |f| %>
