--- a/app/views/sleepingbags/show.html.erb
+++ b/app/views/sleepingbags/show.html.erb
@@ -5,19 +5,18 @@
 </div>
 
 <div class="row">
-  <div class="medium-4  columns float left">
-    <div class="medium-12" id=box>
-      <ul>
-        <li> User: <%= @sleepingbag.user.username %> </li>
-        <li> Brand: <%= @sleepingbag.brand %> </li>
-        <li> Temperature Rating (℉): <%= @sleepingbag.temp_rating %> </li>
-        <li> Size: <%= @sleepingbag.size %> </li>
-        <li> Condition: <%= @sleepingbag.condition %> </li>
-        <li> Fill: <%= @sleepingbag.fill %> </li>
-      <ul>
-    </div>
+  <div class="medium-3 columns float left" id="box">
+    <ul>
+      <li> User: <%= @sleepingbag.user.username %> </li>
+      <li> Brand: <%= @sleepingbag.brand %> </li>
+      <li> Temperature Rating (℉): <%= @sleepingbag.temp_rating %> </li>
+      <li> Size: <%= @sleepingbag.size %> </li>
+      <li> Condition: <%= @sleepingbag.condition %> </li>
+      <li> Fill: <%= @sleepingbag.fill %> </li>
+    <ul>
+    <br>
     <% if current_user == @sleepingbag.user %>
-      <%= link_to "Edit sleepingbag", edit_sleepingbag_path, class: "button radius tiny" %>
+      <div class="text-center"><%= link_to "Edit sleepingbag", edit_sleepingbag_path, class: "button radius tiny" %></div>
     <% end %>
   </div>
   <div class="medium-6 medium-centered columns text centered float left">
