--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -24,3 +24,18 @@
     <% end %>
   </div>
 </div>
+
+<br>
+
+<div class="row">
+  <div class="medium-9 medium-centered text-center columns" id="box">
+    <ul class="inline-list">
+      <%= check_box_tag(:backpack) %>
+      <%= label_tag(:backpack, "Backpack") %>
+      <%= check_box_tag(:tent) %>
+      <%= label_tag(:tent, "Tent") %>
+      <%= check_box_tag(:sleepingbag) %>
+      <%= label_tag(:sleepingbag, "Sleepingbag") %>
+    </ul>
+  </div>
+</div>
