--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,12 +33,12 @@ ul {
   list-style-type: none;
 }
 
-#search {
+/*#search {
   color: black;
   font-family: KGFallForYou;
   text-transform: uppercase;
   font-size: 1.2 em;
-}
+}*/
 
 #box {
   background-color: rgba(255, 255, 255, 0.4);
