--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,31 +4,11 @@
   </div>
 </div>
 
-
-<div class="row">
-  <div class="medium-12 medium-centered text-center columns">
-    <%= link_to "View Available Backpacks", backpacks_path, class: "button radius large"%>
-    <%= link_to "View Available Tents", tents_path, class: "button radius large"%>
-    <%= link_to "View Available Sleeping Bags", sleepingbags_path, class: "button radius large"%>
-  </div>
-</div>
-
 <br>
 
 <div class="row">
   <div class="medium-9 medium-centered text-center columns" id="box">
-    <%= form_tag search_index_path, method: "get" do |f| %>
-      <div id="search"><%= label_tag(:search, "Search for Gear") %></div>
-      <%= text_field_tag(:search, nil, placeholder: "Search By Model Name or Brand") %>
-      <%= submit_tag "Search", class: "button radius small" %>
-    <% end %>
-  </div>
-</div>
-
-<br>
-
-<div class="row">
-  <div class="medium-9 medium-centered text-center columns" id="box">
+    <h3> Search </h3>
     <ul class="inline-list">
       <%= check_box_tag(:backpack) %>
       <%= label_tag(:backpack, "Backpack") %>
