--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,13 @@
 
         <section class="top-bar-section">
           <ul class="right">
+            <li class="divider"></li>
             <% if current_user %>
               <li><%= link_to 'My Account', user_path(current_user.id) %></li>
               <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
             <%- else -%>
               <li><%= link_to 'Sign Up', new_user_registration_path %></li>
               <li><%= link_to 'Sign In', new_user_session_path %></li>
-            <% end %>
-          </ul>
-        </section>
-
-        <section class="top-bar-section">
-          <ul class="right">
-            <%= form_tag search_index_path, method: "get" do |f| %>
-              <%= text_field_tag(:search, nil, placeholder: "Search By Model Name or Brand") %>
             <% end %>
           </ul>
         </section>
