--- a/app/views/backpacks/index.html.erb
+++ b/app/views/backpacks/index.html.erb
@@ -16,6 +16,6 @@
 <br>
 <div class="row">
   <div class="medium-4 text-center columns" id="box">
-    <%= paginate @backpacks %>
+    <h6><%= paginate @backpacks %></h6>
   </div>
 </div>
