--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -18,6 +18,9 @@
       <% end %>
     <% end %>
     </ul>
-    <h5 class="text-center"><%= paginate @results %></h5>
+  </div>
+  <br>
+  <div class="medium-4 medium-centered columns" id="box">
+    <h6 class="text-center"><%= paginate @results %></h6>
   </div>
 </div>
