--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -19,7 +19,7 @@
         <%= label_tag(:search_category, "Sleepingbags") %>
       </ul>
       <%= text_field_tag(:search, nil, placeholder: "Search By Model Name or Brand") %>
-      <%= submit_tag "search", class: "button radius small" %>
+      <%= submit_tag "Search", class: "button radius small" %>
     <% end %>
   </div>
 </div>
