--- a/app/views/user_mailer/request_mailer.text.erb
+++ b/app/views/user_mailer/request_mailer.text.erb
@@ -1,4 +1,4 @@
-<%= @lender.first_name %>, You have a new gear request
+<%= @gear.user.first_name %>, You have a new gear request
 ===========================================================
 
 <%= @user.username %> would like to borrow your <%= @gear.name %> from
