--- a/app/views/user_mailer/request_mailer.html.erb
+++ b/app/views/user_mailer/request_mailer.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1><%= @lender.first_name %>, You have a new gear request </h1>
+    <h1><%= @gear.user.first_name %>, You have a new gear request </h1>
     <p>
       <%= @user.username %> would like to borrow your <%= @gear.name %> from <%= @date1 %> until <%= @date2 %>.  You can contact <%= @user.username %> directly at <%= @user.email %><br>
     </p>
